--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
   <div class="box"></div>
 
   <div class="all">
-    <img class="image" src="images/image-equilibrium.jpg" alt='icon-ethereum' width="340px" height="340px">
+    <img class="image" src="images/image-equilibrium.jpg" alt='icon-equilibtium' width="340" height="340">
 
-    <h1 a href="#"></a>Equilibrium #3429</h1></a>
+    <h1>Equilibrium #3429</h1>
     <p> Our Equilibrium collection promotes balance and calm.</p>
 
     <div class="counter">
-      <h2> <img class="image-svg" src="images/icon-ethereum.svg">0.041 ETH</h2>
-      <h3><img class="clock" src="images/icon-clock.svg">3 days left</h3>
+      <h2> <img class="image-svg" src="images/icon-ethereum.svg" alt='ethereum'>0.041 ETH</h2>
+      <h3><img class="clock" src="images/icon-clock.svg" alt='clock'>3 days left</h3>
     </div>
     <div class="footer">
-      <h4><img class="avatar" src="images/image-avatar.png">Creation of</h4><a href="#">Jules Wyvern</a>
+      <h4><img class="avatar" src="images/image-avatar.png" alt='avatar'>Creation of</h4><a href="#">Jules Wyvern</a>
     </div>
 
 </body>
